add pitest configuration